# HybridAgent

./: .bandit  .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bandit.yaml  ha  hello.py  hybrid_agent.toml  noxfile.py  pyproject.toml  pyproject.toml.bak.1762035321  pyrightconfig.json  tmp_verify_import.py
.github/workflows/: ci.yml
.hybrid/: self_repair_20251103_214615.jsonl  self_repair_20251103_214818.jsonl
.hypothesis/constants/: 0be92b7a7cdc2334  1e506b2abcaf0cb8  3da8f138efdf3fc3  5ca518c1243a0a0b  5ffdb6a4c8b663db  67dccde674520cf6  69f4a26fe31c3438  6a84ff44dbd92776  7747a8a6e0b237a9  809dc487b6298b78  833205ca80660504  89abbcb67bdf6b7c  8d5912ac3e6fc02d  95e223ec1f021aef  dfc5b26d850dc4de  ed267bc139a55c55  f368580de958e9c4
.pre-commit-cache/: db.db
docs/: PHASE5_CLI_SPEC.md
scripts/: ha.sh  vim-hybridagent-command.vim  vscode-tasks.json
src/hybrid_agent/: __init__.py  _sample_bug.py  cli.py  cli_app.py  codex_client.py  loop.py  loop.py.bak  ollama_client.py  self_repair.py
src/hybrid_agent/plugins/: __init__.py  loader.py  protocols.py  registry.py
src/hybrid_agent/plugins/executors/: episode_orchestrator.py  mouth_sync_stub.py
src/hybrid_agent/plugins/executors/mouth_sync/: mouth_sync.py
tests/: __init__.py  conftest.py  fuzz_diff_apply.py  test_episode_orchestrator_smoke.py  test_hypothesis_diff.py  test_loop.py  test_mouth_sync_exec.py  test_plugin_registry_smoke.py  test_plugins_discovery.py  test_self_repair_demo.py
tools/: post_hooks.sh  smoke_apply.sh
