[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "HybridAgent"
version = "0.1.0"
description = "Hybrid agent CLI for generating unified diffs via Ollama and CodexCLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "HybridAgent Maintainers" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tomli>=2; python_version < \"3.11\"",
]

[project.scripts]
ha = "hybrid_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.14",
    "tomli>=2",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
fixable = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
]
