[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "HybridAgent"
version = "0.1.0"
description = "Hybrid agent CLI for generating unified diffs via Ollama and CodexCLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "HybridAgent Maintainers" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tomli>=2; python_version < \"3.11\"",
]

[project.scripts]
ha = "hybrid_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "ruff>=0.14",
    "black>=24",
    "isort>=5",
    "tomli-w>=1.0.0",
    "tomli>=2",
    "mypy>=1",
    "pyright>=1",
    "bandit>=1.7",
    "semgrep>=1",
    "pip-audit>=2",
    "safety>=3",
    "hypothesis>=6",
    "coverage[toml]>=7",
    "nox>=2024.4",
    "pre-commit>=3.7",
    "mutmut>=2.5",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
fixable = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
]
